changed to scss styling

--- a/src/app/performances/performances.component.html
+++ b/src/app/performances/performances.component.html
@@ -42,9 +42,9 @@
     </ul>
 
     <div class="Performances">
-        <h2>My Performances</h2>
+        <h2 class="Title">My Performances</h2>
         <p>Outside of school and academics, I like to think that I'm a physical performing artist. While I used to play violin in both solo and orchestral settings, I'd much rather be physically active doing jumps and tricks than standing in one spot, knees shaking and nerves racing. Thus, I turned to martial arts and cheerleading to get my adrenaline pumping. Feel free to check out my Wushu and Cheerleading performance and competition pictures and videos.</p>
-        <div class="Performances-categories">
+        <div class="Performances-categories Categories">
             <a routerLink="/performances/wushu" class="ImageButton btn btn-outline-primary" role="button">
                 Wushu
                 <img src="assets/images/wushu.jpg" alt="Wushu Image">
