--- a/src/app/projectPages/internships/internship/internship.component.html
+++ b/src/app/projectPages/internships/internship/internship.component.html
@@ -52,9 +52,9 @@
     </ul>
 
     <div class="Projects">
-		<h2>Internships</h2>
+		<h2 class="Title">Internships</h2>
 		<p>I've been fortunate enough to have been an intern during every summer so far in college and work on real projects for each employer. While I'm unable to go into specifics for some of these projects, I am able to give some details and talk about what I did.</p>
-		<div class="Projects-categories">
+		<div class="Projects-categories Categories">
 			<a routerLink="/projects/internships/yext" class="ImageButton btn btn-outline-primary" role="button">
 				Yext
 				<img src="assets/images/yext.jpg" alt="Yext Image">
