--- a/src/app/projectPages/sgdGames/sgd-games/sgd-games.component.html
+++ b/src/app/projectPages/sgdGames/sgd-games/sgd-games.component.html
@@ -52,9 +52,9 @@
     </ul>
 
     <div class="Projects">
-		<h2>Student Game Developers Games</h2>
+		<h2 class="Title">Student Game Developers Games</h2>
 		<p>Student Game Developers is a student-run club at UVA where students can pitch ideas for games and lead teams to develop said idea throughout the semester. It brings together programmers, artists, and writers to make every game as fleshed out and complete as possible. I have been a part of this club since my first semester in college and have enjoyed every project I've been a part of and learning how to use the Unity software. Check out these games I've contributed to so far.</p>
-		<div class="Projects-categories">
+		<div class="Projects-categories Categories">
 			<a routerLink="/projects/sgd/kin" class="ImageButton btn btn-outline-primary" role="button">
 				Kin
 				<img src="assets/images/kin.png" alt="Kin Image">
