--- a/src/app/performancePages/wushuPages/wushu/wushu.component.html
+++ b/src/app/performancePages/wushuPages/wushu/wushu.component.html
@@ -43,11 +43,11 @@
     </ul>
 
     <div class="Performances">
-		<h2>Wushu</h2>
+		<h2 class="Title">Wushu</h2>
 		<p>Wushu, for those unfamiliar, is a form of Chinese martial arts rooted in Chinese Kung Fu with two separate parts: Taolu and Sanda. Taolu is the more widely known and practiced of the two and is performance-based with standardized movements and forms. Taolu competitions are similar to gymnastics where participants perform a standard or self-made form and judges give a score based on subjective and technical aspects. Sanda, or Chinese kick-boxing, is the more combative of the two and is about punches, kicks, and grapples. Sanda competitions are about sparring and participants are scored based on strikes and throwing their opponent to the ground, though a round ends as soon as someone falls and doesn't allow for ground grapples.</p>
 		<p>While I have trained in both, I am much more experienced in the Taolu aspect of Wushu. I started training the summer between my second and third grade, took a break in middle and high school due to a knee issue, then restarted in college for a total of about 8 years. I've always loved learning new forms and weapons and wowing audiences with high-flying jumps and tricks. After learning to flip while cheerleading and overcoming those fears, I'm now more willing and motivated to try tricks that I wouldn't dare attempt years before. Competitions are also a fun way to see where I am compared to other college athletes and also a great way to meet fellow Wushu practitioners.</p>
 		<p>Take a look at the competitions and performances I've participated in throughout my college Wushu career.</p>
-		<div class="Performances-categories">
+		<div class="Performances-categories Categories">
 			<a routerLink="/performances/wushu/uwg" class="ImageButton btn btn-outline-primary" role="button">
 				UWG
 				<img src="assets/images/uwg.jpg" alt="UWG Image">
