--- a/src/app/projectPages/hackathon/hoohacks/hoohacks.component.html
+++ b/src/app/projectPages/hackathon/hoohacks/hoohacks.component.html
@@ -52,10 +52,10 @@
     </ul>
 
     <div class="Projects">
-		<h2>HooHacks (formerly HackUVA)</h2>
+		<h2 class="Title">HooHacks (formerly HackUVA)</h2>
 		<p>HackUVA is the University of Virginia's annual 24-hour hackathon organized by the student-run HackUVA committee. For those unfamiliar, hackathons are events where participants have a set time, typically 24 or 36 hours, to make something that solves a problem, whether it be an application or even some hardware. Typically hackathons will have themes or challenges for participants to base their projects around. For example, in 2018, HackUVA's themes were Safety, Equality, and Empowerment. </p>
 		<p>HackUVA 2017 was the first hackathon that I ever participated in and I've enjoyed working with friends to create something while learning new technologies and languages that they know about. Here are the projects that I've been a part of so far:</p>
-		<div class="Projects-categories">
+		<div class="Projects-categories Categories">
 			<a routerLink="/projects/hoohacks/simplisci" class="ImageButton btn btn-outline-primary" role="button">
 				Simplisci <br>(winner: Domain Name)
 				<img src="assets/images/hoohacks.png" alt="HooHacks Image">
