--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,4 +2,33 @@
 	&-content {
 		font-size: 20px;
 	}
+
+	&-icon {
+		height: 20px;
+		width: 20px;
+	}
+
+	&-withPictures {
+		display: flex;
+
+		p {
+			width: 40%;
+			margin-right: 15px;
+		}
+	}
+
+	&-pictures {
+		height: 400px;
+		width: 60%;
+	}
+}
+
+.carousel-item-next > img,
+.carousel-item-prev > img,
+.carousel-item.active > img {
+	height: 400px;
+	width: auto;
+
+	margin-left: auto;
+	margin-right: auto;
 }
