--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
             </p>
             <a href="#" class="ImageButton-home btn btn-outline-primary" role="button">
                 Click Here
-                <img src="assets/images/projectsHome.png" alt="Projects Compilation">
+                <img src="assets/images/projectsHome.jpg" alt="Projects Compilation">
             </a>
         </div>
         <div class="col-md-4 Home-column">
@@ -35,7 +35,7 @@
             </p>
             <a href="#" class="ImageButton-home btn btn-outline-primary" role="button">
                 Click Here
-                <img src="assets/images/resumeHome.png" alt="Resume Compilation">
+                <img src="assets/images/resumeHome.jpg" alt="Resume Compilation">
             </a>
         </div>
         <div class="col-md-4 Home-column">
@@ -45,7 +45,7 @@
             </p>
             <a href="#" class="ImageButton-home btn btn-outline-primary" role="button">
                 Click Here
-                <img src="assets/images/performanceHome.png" alt="Wushu and Cheer">
+                <img src="assets/images/performanceHome.jpg" alt="Wushu and Cheer">
             </a>
         </div>      
     </div>
