--- a/src/app/performancePages/cheerPages/cheer2015/cheer2015.component.html
+++ b/src/app/performancePages/cheerPages/cheer2015/cheer2015.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="Banner">
             <div class="Banner-image">
-                <img src="assets/images/wushu.jpg" alt="Wushu Image" height="140" width="140">
+                <img src="assets/images/cheer.jpg" alt="Cheer Image" height="140" width="140">
             </div>
             <div class="Banner-description">
                 <h1>
