--- a/src/app/performancePages/wushuPages/collegiates/collegiates.component.html
+++ b/src/app/performancePages/wushuPages/collegiates/collegiates.component.html
@@ -46,26 +46,92 @@
     <div class="Collegiates">
 		<h2>Collegiates</h2>
 		<p>Collegiates is an annual Wushu competition organized by the Collegiate Wushu Committee, which is a group of college Wushu club leaders from around the nation lead by some club coaches and competition judges, that vote on and discuss when and where to host the competition as well as any changes to rules and scoring that need to be made.</p>
-		<p>This past year was the first Collegiates competition I attended at the University of Pittsburg, where I received one gold medal and two silvers. Check out these videos of my performances. (video credits to Mitchell Levasseur)</p>
-		<div class="Video-videoGroup">
-			<h3 class="Video-videoTitle">LongFist Barehand</h3>
-			<div class="embed-responsive embed-responsive-16by9">
-				<iframe width="1519" height="554" src="https://www.youtube.com/embed/IRshOHnrPEc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-		</div>
+        <div class="Collegiates-group">
+            <h5>Collegiates 2017: UPitt</h5>
+            <p>The 2017 competition at the University of Pittsburg was the first Collegiates I attended, where I received one gold medal and two silvers. Check out these videos of my performances. (video credits to Mitchell Levasseur)</p>
+            <div class="Slideshow">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="Video-videoGroup">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe width="1519" height="554" src="https://www.youtube.com/embed/IRshOHnrPEc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                              <div class="carousel-caption d-none d-md-block">
+                                <h5>LongFist (Changquan)</h5>
+                            </div>
+                        </div>
+    
+                        <div class="carousel-item">
+                            <div class="Video-videoGroup">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe width="1519" height="554" src="https://www.youtube.com/embed/PxhDFn1lwjQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Straightsword (JianShu)</h5>
+                            </div>
+                        </div>
+    
+                        <div class="carousel-item">
+                            <div class="Video-videoGroup">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe width="1519" height="554" src="https://www.youtube.com/embed/A-SCmrwNlXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Spear (QiangShu)</h5>
+                            </div>
+                        </div>
+                    </div>
+                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                </div>
+            </div>
+        </div>
+        <div class="Collegiates-group">
+            <h5>Collegiates 2018: UC Irvine</h5>
+            <p>The next year, the University of California Irvine hosted the competition, so a small group of us flew across the country to compete. While I didn't win any medals, I had a lot of fun travelling and bonding with my teammates. Videos credit to Blue Hippo Films.</p>
+            <div class="Slideshow">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="Video-videoGroup">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe width="1519" height="554" src="https://www.youtube.com/embed/4QMRWJPzrf4?list=PL1otiq-z8nID4JblaAao7k8KokeybzNSo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                            </div>
+                            </div>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>LongFist (Changquan)</h5>
+                            </div>
+                        </div>
 
-		<div class="Video-videoGroup">
-			<h3 class="Video-videoTitle">Straight Sword</h3>
-			<div class="embed-responsive embed-responsive-16by9">
-				<iframe width="1519" height="554" src="https://www.youtube.com/embed/PxhDFn1lwjQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-		</div>
-
-		<div class="Video-videoGroup">
-			<h3 class="Video-videoTitle">Spear</h3>
-			<div class="embed-responsive embed-responsive-16by9">
-				<iframe width="1519" height="554" src="https://www.youtube.com/embed/A-SCmrwNlXU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-		</div>
+                        <div class="carousel-item">
+                            <div class="Video-videoGroup">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe width="1519" height="554" src="https://www.youtube.com/embed/QV5hWRVP3u0?list=PL1otiq-z8nID4JblaAao7k8KokeybzNSo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                            </div>
+                            </div>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Straightsword (JianShu)</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
 	</div>
 </div>
