fixed links on home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
             <p>
                 If you're interested in seeing the projects I've worked on
             </p>
-            <a href="#" class="ImageButton-home btn btn-outline-primary" role="button">
+            <a routerLink="/projects" class="ImageButton-home btn btn-outline-primary" role="button">
                 Click Here
                 <img src="assets/images/projectsHome.jpg" alt="Projects Compilation">
             </a>
@@ -33,7 +33,7 @@
             <p>
                 If you're interested in viewing my professional resume
             </p>
-            <a href="#" class="ImageButton-home btn btn-outline-primary" role="button">
+            <a routerLink="/resume" class="ImageButton-home btn btn-outline-primary" role="button">
                 Click Here
                 <img src="assets/images/resumeHome.jpg" alt="Resume Compilation">
             </a>
@@ -43,7 +43,7 @@
             <p>
                 If you're interested in checking out my performing arts side
             </p>
-            <a href="#" class="ImageButton-home btn btn-outline-primary" role="button">
+            <a routerLink="/performances" class="ImageButton-home btn btn-outline-primary" role="button">
                 Click Here
                 <img src="assets/images/performanceHome.jpg" alt="Wushu and Cheer">
             </a>
