fixed sgd link in projects page + deployment files

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -54,7 +54,7 @@
         <h2 class="Title">My Projects</h2>
         <p>I've had a chance to work on many different projects throughout my college career through the Student Game Developers Club (SGD), HackUVA, and in my internships over summers. Feel free to click into the sub-categories below, play some of the games, and learn more about each project.</p>
         <div class="Projects-categories Categories">
-            <a routerLink="/projects/sgdGames" class="ImageButton btn btn-outline-primary" role="button">
+            <a routerLink="/projects/sgd" class="ImageButton btn btn-outline-primary" role="button">
                 SGD Games
                 <img src="assets/images/sgd.png" alt="SGD Image">
             </a>
