--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,26 +9,29 @@
 
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                      <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" routerLink="">Home</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" routerLink="/about">About</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" routerLink="/resume">Resume</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" routerLink="/projects">Projects</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" routerLink="/performances">Performance</a>
-                      </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/resume">Resume</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/performances">Performance</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/blog">Blog</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                      <li class="nav-item">
-                          <a class="nav-link" routerLink="/contact">Contact Me</a>
-                      </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/contact">Contact Me</a>
+                    </li>
                 </ul>
               </div>
         </div>	
