--- a/src/app/performancePages/wushuPages/collegiates/collegiates.component.html
+++ b/src/app/performancePages/wushuPages/collegiates/collegiates.component.html
@@ -50,7 +50,7 @@
             <h5>Collegiates 2017: UPitt</h5>
             <p>The 2017 competition at the University of Pittsburg was the first Collegiates I attended, where I received one gold medal and two silvers. Check out these videos of my performances. (video credits to Mitchell Levasseur)</p>
             <div class="Slideshow">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div id="Videos2017" class="carousel slide" data-ride="carousel" data-interval="false">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="Video-videoGroup">
@@ -85,11 +85,11 @@
                             </div>
                         </div>
                     </div>
-                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                     <a class="carousel-control-prev" href="#Videos2017" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                       </a>
-                      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <a class="carousel-control-next" href="#Videos2017" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                       </a>
@@ -100,7 +100,7 @@
             <h5>Collegiates 2018: UC Irvine</h5>
             <p>The next year, the University of California Irvine hosted the competition, so a small group of us flew across the country to compete. While I didn't win any medals, I had a lot of fun travelling and bonding with my teammates. Videos credit to Blue Hippo Films.</p>
             <div class="Slideshow">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div id="Videos2018" class="carousel slide" data-ride="carousel" data-interval="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="Video-videoGroup">
@@ -122,11 +122,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#Videos2018" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#Videos2018" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
