--- a/src/app/performancePages/wushuPages/demos/demos.component.html
+++ b/src/app/performancePages/wushuPages/demos/demos.component.html
@@ -52,7 +52,7 @@
 			<p>Full-Moon Fest is an event hosted by the Chinese Student Association (CSA) occuring around early-mid September that celebrates the Mid-Autumn Festival, albeit a few months late. While they have their own dances and skits that tell classic Chinese stories, our club is often brought in as guests performers. </p>
 			<p>Check out these videos from our performances in 2017 and 2019. Videos from other years are unfortunately only posted in our closed Facebook group, so I am unable to link them here.</p>
             <div class="Slideshow">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div id="FullMoonVideos" class="carousel slide" data-ride="carousel" data-interval="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="embed-responsive embed-responsive-16by9">
@@ -72,11 +72,11 @@
                             </div>
                         </div>
                     </div>
-                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                     <a class="carousel-control-prev" href="#FullMoonVideos" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#FullMoonVideos" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
@@ -96,9 +96,17 @@
 			<p>ChinaFest is another event hosted by CSA occuring in early-mid February that celebrates Chinese New Year. Unlike our other performances, we often center this one around a story, hopefully one well-known enough such that the audience can figure it out. If not, the MCs give it away while they introduce us anyway.</p>
 			<p>Check out our performances from these past two years.</p>            
             <div class="Slideshow">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                <div id="ChinaFestVideos" class="carousel slide" data-ride="carousel" data-interval="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe width="1519" height="554" src="https://www.youtube.com/embed/IP5jXjbkMXo?list=PL1otiq-z8nIB07KYwhNCHtCSRPTqB1uxL" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>2020 Performance: Kung Fu Panda</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
                             <div class="embed-responsive embed-responsive-16by9">
                                 <iframe width="1519" height="554" src="https://www.youtube.com/embed/8VdxlMxG8LY?list=PL1otiq-z8nIB07KYwhNCHtCSRPTqB1uxL" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
@@ -125,11 +133,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#ChinaFestVideos" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#ChinaFestVideos" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                       </a>
