--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -20,33 +20,28 @@
 <div class="PageContent container">
     <div class="Resume" itemscope itemtype="http://schema.org/Person">
         <div class="Resume-header">
-            <div class="Resume-schoolAddress Address">
-                <h3>School Address:</h3>
-                <p class="Address-line1">2100 Jefferson Park Ave APT 1</p>
-                <p class="Address-line2">Charlottesville, VA 22903</p>
+            <div class="Resume-homeAddress Address" itemscope itemtype="http://schema.org/PostalAddress">
+                <h3>Address:</h3>
+                <p class="Address-line1" itemprop="streetAddress">951 Preserve Ct.</p>
+                <p class="Address-line2">
+                    <span itemprop="addressLocality">Great Falls</span>,
+                    <span itemprop="addressRegion">VA </span>
+                    <span itemprop="postalCode">22066</span>
+                </p>
             </div>
             <div class="Resume-title">
                 <h1 itemprop="name">Kenneth Chen</h1>
                 <p class="Resume-email" itemprop="email">kchen.mail@icloud.com</p>
                 <p itemprop="telephone">571-267-1911</p>
             </div>
-            <div class="Resume-homeAddress Address" itemscope itemtype="http://schema.org/PostalAddress">
-                <h3>Permanent Address:</h3>
-                <p class="Address-line1" itemprop="streetAddress">951 Preserve Ct.</p>
-                <p class="Address-line2">
-                    <span itemprop="addressLocality">Great Falls</span>,
-                    <span itemprop="addressRegion">VA</span>
-                    <span itemprop="postalCode">22066</span>
-                </p>
-            </div>
         </div>
         <div class="Resume-education">
             <h3 class="Resume-sectionHeader">Education</h3>
             <div class="Resume-entry">
-                <p class="Resume-schoolName">University of Virginia School of Engineering and Applied Science <span class="Resume-GPA">(Current GPA: 3.872)</span></p>
-                <p class="Resume-entryTime">May 2020 Grad</p>
-                <p class="Resume-majors">Computer Science and Psychology Double Major, Applied Mathematics Minor</p>
-                <p class="Resume-classes"><i>Relevant Classwork:</i> Intro to Cybersecurity, Machine Learning, Database Systems</p>
+                <p class="Resume-schoolName">University of Virginia School of Engineering and Applied Science <span class="Resume-GPA">(Final GPA: 3.872)</span></p>
+                <p class="Resume-entryTime">Aug 2016 - May 2020</p>
+                <p class="Resume-majors">Computer Science and Psychology Double Major</p>
+                <p class="Resume-classes"><i>Relevant Classwork:</i> Intro to Cybersecurity, Machine Learning, Database Systems, Cloud Computing</p>
             </div>
             <div class="Resume-entry">
                 <p class="Resume-schoolName">Thomas Jefferson High School for Science and Technology <span class="Resume-GPA">(Final GPA: 4.456)</span></p>
@@ -56,7 +51,7 @@
         <div class="Resume-technical">
             <h3 class="Resume-sectionHeader">Technical Skills</h3>
             <div class="Resume-skills">
-                <p><span class="Resume-skillTitle">Proficient: </span>Java, Go, HTML, CSS/SCSS, Python, Unity, C#, Javascript, C++, C, Django, Soy Templates, Agile, Git</p>
+                <p><span class="Resume-skillTitle">Proficient: </span>Java, Go, HTML, CSS/SCSS, Python, Unity, C#, Javascript, C++, C, Angular Django, Soy Templates, Agile, Git</p>
                 <p><span class="Resume-skillTitle">Novice: </span>SQL, JIRA, Jenkins, x86 Assembly, Android Studio, Heroku</p>
             </div>
         </div>
@@ -64,7 +59,7 @@
             <h3 class="Resume-sectionHeader">Work Experience</h3>
             <div class="Resume-entry">
                 <div class="Resume-entryName">
-                    <p class="Resume-employerName">Yext Tysons Corner</p>
+                    <p class="Resume-employerName">Yext</p>
                     <p class="Resume-jobTitle">Software Engineering Intern</p>
                 </div>
                 <p class="Resume-entryTime">June 2019 - August 2019</p>
@@ -80,7 +75,7 @@
                     <p class="Resume-employerName">University of Virginia Department of Computer Science</p>
                     <p class="Resume-jobTitle">Head Teaching Assistant for CS 2110: Software Development Methods</p>
                 </div>
-                <p class="Resume-entryTime">Sept. 2017-Present</p>
+                <p class="Resume-entryTime">Sept. 2017 - May 2020</p>
                 <ul class="Resume-entryDescription">
                     <li>Create lectures for and redesign labs, hold office hours, assist professors in class, assist with exam and homework grading</li>
                     <li>Skills Used: <span class="Resume-skillsUsed">Java</span></li>
@@ -88,7 +83,7 @@
             </div>
             <div class="Resume-entry">
                 <div class="Resume-entryName">
-                    <p class="Resume-employerName">Yext Tysons Corner</p>
+                    <p class="Resume-employerName">Yext</p>
                     <p class="Resume-jobTitle">Software Engineering Intern</p>
                 </div>
                 <p class="Resume-entryTime">June 2018 - August 2018</p>
@@ -115,35 +110,35 @@
             <h3 class="Resume-sectionHeader">Projects</h3>
             <div class="Resume-entry">
                 <div class="Resume-entryName">
-                    <p class="Resume-projectName">Traffic Predictor Model</p>
+                    <a href="https://github.com/ss2sc/CS2110HWSubmission" class="Resume-projectName">CS 2110 Homework Grading System</a>
                 </div>
-                <p class="Resume-entryTime">Jan 2019 - May 2019</p>
+                <p class="Resume-entryTime">Aug 2019 - May 2020</p>
                 <ul class="Resume-entryDescription">
-                    <li>Trained machine learning model to predict a road’s average daily traffic based on road conditions, length, and other data.</li>
-                    <li>Skills Used: <span class="Resume-skillsUsed">Python, Machine Learning, Scikit-Learn, Jupyter Notebook</span></li>
+                    <li>Web Application to replace outdated current system. Built and styled front-end pages and created dynamic rubrics</li>
+                    <li>Skills Used: <span class="Resume-skillsUsed">Angular, HTML, CSS/SCSS, Javascript</span></li>
                 </ul>
             </div>
             <div class="Resume-entry">
                 <div class="Resume-entryName">
-                    <p class="Resume-projectName">Textbook Marketplace</p>
+                    <a href="http://textbook-finder.herokuapp.com/" class="Resume-projectName">Textbook Marketplace</a>
                     <p class="Resume-jobTitle">Team Scrum Master</p>
                 </div>
                 <p class="Resume-entryTime">Sept. 2018 - Dec 2018</p>
                 <ul class="Resume-entryDescription">
                     <li>Web application for students to buy and sell used textbooks. Built searching and filtering functionality</li>
                     <li>Assigned weekly work for team and lead standup meetings</li>
-                    <li>Skills Used: <span class="Resume-skillsUsed">Django, Heroku, HTML, CSS</span>. Link: <a href="http://textbook-finder.herokuapp.com/">here</a></li>
+                    <li>Skills Used: <span class="Resume-skillsUsed">Django, Heroku, HTML, CSS</span>.</li>
                 </ul>
             </div>
             <div class="Resume-entry">
                 <div class="Resume-entryName">
-                    <p class="Resume-projectName">Various Game (Kin, Dusk Patrol, Bard's Tale)</p>
+                    <a routerLink="/projects/sgd" class="Resume-projectName">Various Games (Kin, Dusk Patrol, Bard's Tale)</a>
                     <p class="Resume-jobTitle">Senior Programmer</p>
                 </div>
                 <p class="Resume-entryTime">Sept. 2016 - May 2019</p>
                 <ul class="Resume-entryDescription">
                     <li>Designed and implemented game systems including enemy movements, spell casting, and time travel.</li>
-                    <li>Skills Used: Unity, C#. Link: <a routerLink="/projects/sgd">here</a>.</li>
+                    <li>Skills Used: <span class="Resume-skillsUsed">Unity, C#</span>.</li>
                 </ul>
             </div>
         </div>
@@ -151,21 +146,23 @@
             <h3 class="Resume-sectionHeader">Extracurricular Activities</h3>
             <div class="Resume-entry">
                 <div class="Resume-entryName">
-                    <p class="Resume-projectName">Virginia Wushu Club: <span class="Resume-activityPosition">President</span></p>
+                    <a routerLink="/performances/wushu" class="Resume-projectName">Virginia Wushu Club: </a><span class="Resume-activityPosition">President</span>
                 </div>
-                <p class="Resume-entryTime">Sept. 2016 - Present</p>
-                <p class="Resume-activityDescription">Learn and teach others Chinese martial arts by leading practices and helping to choreograph performances. Check out our performances <a routerLink="/performances/wushu">here</a>.</p>
+                <p class="Resume-entryTime">Sept. 2016 - May 2020 </p>
+                <p class="Resume-activityDescription">Learn and teach others Chinese martial arts by leading practices and helping to choreograph performances.</p>
             </div>
             <div class="Resume-entry">
                 <div class="Resume-entryName">
-                    <p class="Resume-projectName">Student Game Developers: <span class="Resume-activityPosition">Senior Programmer</span></p>
+                    <a routerLink="/projects/sgd" class="Resume-projectName">Student Game Developers: </a><span class="Resume-activityPosition">Senior Programmer</span>
                 </div>
-                <p class="Resume-entryTime">Sept. 2016 - Present</p>
-                <p class="Resume-activityDescription">Programmed the artificial intelligence behaviors for NPCs and enemies and implemented general features in games. For list of games I've worked on, click <a routerLink="/projects/sgd">here</a>.</p>
+                <p class="Resume-entryTime">Sept. 2016 - May 2019</p>
+                <p class="Resume-activityDescription">Programmed the artificial intelligence behaviors for NPCs and enemies and implemented general features in games.</p>
             </div>
-            <div class="Resume-activityEntry">
-                <p class="Resume-activityName">HackUVA: <span class="Resume-activityPosition">Participant</span></p>
-                <p class="Resume-activityDescription">Worked on projects including Face Normalizer to reduce bias and Simplisci to make scientific papers easier to read. For more details, click <a routerLink="/projects/hoohacks">here</a>.</p>
+            <div class="Resume-entry">
+                <div class="Resume-entryName">
+                    <a routerLink="/projects/hoohacks" class="Resume-projectName">HackUVA: </a><span class="Resume-activityPosition">Participant</span>
+                </div>
+                <p class="Resume-activityDescription">Worked on projects including Face Normalizer to reduce bias and Simplisci to make scientific papers easier to read.</p>
             </div>
         </div>
     </div>
