added 404 and error pages, thesis to project page, updated deployment instructions

--- a/src/app/projectPages/classes/classes.component.html
+++ b/src/app/projectPages/classes/classes.component.html
@@ -67,6 +67,16 @@
             </div>
         </div>
         <div class="Projects-projectGroup">
+			<h4>4th Year Research Thesis: The Psychology of Video Games </h4>
+            <h6>For STS 4600: Engineering Ethics and Professional Responsibility</h6>
+            <div class="Projects-projectText">
+                <p>On top of the capstone project, graduating students at UVA are required to research a topic relating to technology and its impact on society and write a paper on what they found. My topic was about the effect of playing video games on the minds and behaviors of players. As a computer science and psychology double major, this topic brought together both of my fields of study as well as covered a topic that I personally am interested in. The idea was also inspired by a <i>Game Theory</i> YouTube video that shows how playing video games doesn’t cause mass shootings.</p>
+                <p>For my thesis, I wanted to examine how video games affect our minds in other ways, both positively and negatively. Since finding every effect would be far beyond the scope of a 4th-year thesis, I examined more well-known ones and researched scientific studies that back them up. Some negative consequences include gambling behaviors, predatory game mechanics, and gaming addiction. Gaming benefits I talk about include building skills, socializing (especially applicable during the 2020 coronavirus crisis), and emotional and mental benefits. I concluded that video games are beneficial for the most part, but that gamers need to be cautious about addictive behaviors and the predatory mechanics companies employ in many modern games.</p>
+                <p>Through researching for this paper I learned a lot about games that I didn’t know before. I learned that the Supreme Court ruled on a case that struck down California’s banning of certain games, saying explicitly that there isn’t enough evidence to link violence to video games. I never would have guessed that playing action games helps players process incoming stimuli faster, potentially allowing dyslexic kids to read better. These findings are as important to show as the many misleading ones the media uses to “support” their dislike of video games. Especially since video games are so popular nowadays and likely won’t disappear soon, I hope my paper can provide a more balanced viewpoint of their effects and will encourage a more balance discussion in the future.</p>
+                <p>Link to download my paper along with my capstone paper <a href="https://doi.org/10.18130/v3-cncd-yx23">here</a>.</p>
+            </div>
+        </div>
+        <div class="Projects-projectGroup">
 			<h4>Open Note</h4>
             <h6>For CS 4730: Game Design</h6>
             <h6>Skills Used: C++</h6>
