added blog post for jan 9, 2021

--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -9,6 +9,10 @@
         width: 100%;
         height: auto;
     }
+
+    &-itemHeading {
+        font-weight: bold;
+    }
 }
 
 @media (max-width: 768px) {
