updated resume, removed address + phone

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -20,19 +20,9 @@
 <div class="PageContent container">
     <div class="Resume" itemscope itemtype="http://schema.org/Person">
         <div class="Resume-header">
-            <div class="Resume-homeAddress Address" itemscope itemtype="http://schema.org/PostalAddress">
-                <h3>Address:</h3>
-                <p class="Address-line1" itemprop="streetAddress">951 Preserve Ct.</p>
-                <p class="Address-line2">
-                    <span itemprop="addressLocality">Great Falls</span>,
-                    <span itemprop="addressRegion">VA </span>
-                    <span itemprop="postalCode">22066</span>
-                </p>
-            </div>
             <div class="Resume-title">
                 <h1 itemprop="name">Kenneth Chen</h1>
                 <p class="Resume-email" itemprop="email">kchen.mail@icloud.com</p>
-                <p itemprop="telephone">571-267-1911</p>
             </div>
         </div>
         <div class="Resume-education">
@@ -51,7 +41,7 @@
         <div class="Resume-technical">
             <h3 class="Resume-sectionHeader">Technical Skills</h3>
             <div class="Resume-skills">
-                <p><span class="Resume-skillTitle">Proficient: </span>Java, Go, HTML, CSS/SCSS, Python, Unity, C#, Javascript, C++, C, Angular Django, Soy Templates, Agile, Git</p>
+                <p><span class="Resume-skillTitle">Proficient: </span>Java, Go, Rust, HTML, CSS/SCSS, Python, Unity, C#, Javascript, C++, C, Angular Django, Soy Templates, Agile, Git</p>
                 <p><span class="Resume-skillTitle">Novice: </span>SQL, JIRA, Jenkins, x86 Assembly, Android Studio, Heroku</p>
             </div>
         </div>
@@ -59,15 +49,15 @@
             <h3 class="Resume-sectionHeader">Work Experience</h3>
             <div class="Resume-entry">
                 <div class="Resume-entryName">
-                    <p class="Resume-employerName">Yext</p>
-                    <p class="Resume-jobTitle">Software Engineering Intern</p>
+                    <p class="Resume-employerName">Amazon Web Services</p>
+                    <p class="Resume-jobTitle">Software Development Engineer</p>
                 </div>
-                <p class="Resume-entryTime">June 2019 - August 2019</p>
+                <p class="Resume-entryTime">July 2020 - Present</p>
                 <ul class="Resume-entryDescription">
-                    <li>Implemented processes to load client data into our platform so clients don’t need to manually add thousands of entities</li> 
-                    <li>Created dashboard to display site views per employee based on Git contribution to track work over time</li>
-                    <li>Updated team family tree to help new employees learn about their coworkers</li>
-                    <li>Skills Used: <span class="Resume-skillsUsed">HTML, CSS, Javascript, Go, Git, JIRA, Agile, SQL</span></li>
+                    <li>Updated existing data delivery system by migrating to step functions</li> 
+                    <li>Building new system to expand data delivery capabilities and reduce external vendor dependencies</li>
+                    <li>Periodic on-call shifts to respond quickly to, investigate, and mitigate system failures.</li>
+                    <li>Skills Used: <span class="Resume-skillsUsed">Java, Rust, Git, AWS Lambda, AWS Step Functions, AWS Cloud Formation</span></li>
                 </ul>
             </div>
             <div class="Resume-entry">
@@ -79,6 +69,19 @@
                 <ul class="Resume-entryDescription">
                     <li>Create lectures for and redesign labs, hold office hours, assist professors in class, assist with exam and homework grading</li>
                     <li>Skills Used: <span class="Resume-skillsUsed">Java</span></li>
+                </ul>
+            </div>
+            <div class="Resume-entry">
+                <div class="Resume-entryName">
+                    <p class="Resume-employerName">Yext</p>
+                    <p class="Resume-jobTitle">Software Engineering Intern</p>
+                </div>
+                <p class="Resume-entryTime">June 2019 - August 2019</p>
+                <ul class="Resume-entryDescription">
+                    <li>Implemented processes to load client data into our platform so clients don’t need to manually add thousands of entities</li> 
+                    <li>Created dashboard to display site views per employee based on Git contribution to track work over time</li>
+                    <li>Updated team family tree to help new employees learn about their coworkers</li>
+                    <li>Skills Used: <span class="Resume-skillsUsed">HTML, CSS, Javascript, Go, Git, JIRA, Agile, SQL</span></li>
                 </ul>
             </div>
             <div class="Resume-entry">
@@ -140,29 +143,6 @@
                     <li>Designed and implemented game systems including enemy movements, spell casting, and time travel.</li>
                     <li>Skills Used: <span class="Resume-skillsUsed">Unity, C#</span>.</li>
                 </ul>
-            </div>
-        </div>
-        <div class="Resume-activities">
-            <h3 class="Resume-sectionHeader">Extracurricular Activities</h3>
-            <div class="Resume-entry">
-                <div class="Resume-entryName">
-                    <a routerLink="/performances/wushu" class="Resume-projectName">Virginia Wushu Club: </a><span class="Resume-activityPosition">President</span>
-                </div>
-                <p class="Resume-entryTime">Sept. 2016 - May 2020 </p>
-                <p class="Resume-activityDescription">Learn and teach others Chinese martial arts by leading practices and helping to choreograph performances.</p>
-            </div>
-            <div class="Resume-entry">
-                <div class="Resume-entryName">
-                    <a routerLink="/projects/sgd" class="Resume-projectName">Student Game Developers: </a><span class="Resume-activityPosition">Senior Programmer</span>
-                </div>
-                <p class="Resume-entryTime">Sept. 2016 - May 2019</p>
-                <p class="Resume-activityDescription">Programmed the artificial intelligence behaviors for NPCs and enemies and implemented general features in games.</p>
-            </div>
-            <div class="Resume-entry">
-                <div class="Resume-entryName">
-                    <a routerLink="/projects/hoohacks" class="Resume-projectName">HackUVA: </a><span class="Resume-activityPosition">Participant</span>
-                </div>
-                <p class="Resume-activityDescription">Worked on projects including Face Normalizer to reduce bias and Simplisci to make scientific papers easier to read.</p>
             </div>
         </div>
     </div>
