changed about and intro text, added streamer info

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,8 +9,7 @@
                     Welcome to My Website!
                 </h1>
                 <p>
-                    My name is Kenneth Chen. I’m a student at the University of Virginia studying computer science. Outside of school, I enjoy doing martial arts, playing and building video games, and exploring the wide Star Wars galaxy.
-                </p>
+                    My name is Kenneth Chen. I’m a software developer, martial artist, and amateur streamer at <a href="https://www.twitch.tv/kungfu_kenny98">https://www.twitch.tv/kungfu_kenny98</a>. I enjoy exploring the Star Wars Universe, making new Pokémon friends, dipping my toes into new games and genres, and sharing my passions with my friends and community. Welcome to my website!                 </p>
             </div>
         </div>  
     </div>
